objects/C360TACCasesAPI__c.object
<CustomObject>
    <fields>
        <fullName>BodyEndPointURL__c</fullName>
        <label>BodyEndPointURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <label>PROD ORG ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAC_NPS__c</fullName>
        <label>TAC/NPS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TACendPointURL__c</fullName>
        <label>TACendPointURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>C360TACCasesAPI</label>
</CustomObject>